--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{myshortcuts}
 \usepackage{a4wide}
-\usepackage{mhchem}
+\usepackage[version=4]{mhchem}
 \usepackage{physics}
 \usepackage{csquotes}
 \usepackage{enumitem}
