final final final

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \title{
 \textbf{Physics Internal Assessment}\\
 \bigskip
-What effect does varying the diameter of a thin wire have on the width of diffraction fringes?
+What effect does varying the diameter of a thin wire have on the width of diffraction fringes produced?
 }
 \author{}
 \date{}
@@ -155,7 +155,7 @@ $d$, diameter of the wire. Manufacturer's values (in \si{\um}): $38, 50, 76, 100
 \end{figure}
 
 \subsection*{Dependent variable}
-$\Delta s$, width of bright fringes. Measured against a piece of millimetre paper in \si{\mm} with computer assistance.
+$\Delta s$, width of bright fringes. Measured against a piece of millimetre paper in \si{\mm} with computer program that I wrote \autocite{py_extract}.
 
 \subsection*{Controlled variables}
 \begin{itemize}
@@ -165,10 +165,10 @@ $\Delta s$, width of bright fringes. Measured against a piece of millimetre pape
     \item Angle and position from which the photos are taken
 \end{itemize}
 $\lambda$ and $D$ are controlled because they are part of \cref{eq:hypothesis}, the hypothesised relationship between $\Delta s$ and $d$. 
-The photographing is also controlled to avoid systematic errors.
+The photographing is also controlled to avoid errors in $\Delta s$.
 
 \section{Method}
-To minimise the impact of ambient lighting on the diffraction pattern observed, we carried out the experiment in a dark room. 
+To minimise the impact of ambient lighting on the diffraction pattern observed, I carried out the experiment in a dark room. 
 Since the pupil then dilates to improve vision by allowing more light into the eye, special care was taken to avoid shining the laser beam or its reflection into the eye. 
 Measures to prevent eye damages included ensuring that no one else is in the same room and not pointing the laser on reflective surfaces.
 
